[elf_b] Now self-compiles successfully.  Supports elf_a command-line.  Also new --compiler and -o arguments.  Also --check-bootstrap.  New prelude.p6 forked from elf_a's prelude.pl. --check-bootstrap currently fails with an odd system() error - but commands work when run by hand. [STD_red] Provides a Match for "$1".
git-svn-id: http://svn.pugscode.org/pugs@20182 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -38,8 +38,12 @@ else {
      $f.'->('.join(",",@{$n<arguments>}).')';
   }elsif($f eq 'self') {
     '$self'
-  }else{
+  }elsif($f eq 'last') {
+    'last'
+  }elsif($f =~ /^\w/) {
      '::'.$f.'('.join(",",@{$n<arguments>}).')';
+  }else{
+     $f.'('.join(",",@{$n<arguments>}).')';
   }
 }
 
