[elf_a/b] Tweaking how Moose is used.
git-svn-id: http://svn.pugscode.org/pugs@20185 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
+++ b/misc/winter_jig/elf_on_STD_red/elf_a_src/emit_p5.config
@@ -134,9 +134,9 @@ local $whiteboard::in_package = [@{(($whiteboard::in_package))},$n<name>];
 my $name = join('::',@{(($whiteboard::in_package))});
 ("\n{ package ".$name.";\n".
  "use Moose;\n".
- "use Moose::Autobox; use autobox; use autobox::Core; use autobox UNDEF => 'UNDEF';\n". #XXX can this be use()d in one place instead?
  join("\n",@{$n<traits>||[]}).
  $n<block>.
+ "; __PACKAGE__->meta->make_immutable();\n".
  "\n}\n");
 
 Trait
