[elfish/showcode] Makefile: fixed.  The ELF_STD_RED_RUN check now fails properly, and anyway, the Makefile itself now sets it.  moritz_++
git-svn-id: http://svn.pugscode.org/pugs@20494 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/showcode/Makefile
+++ b/misc/elfish/showcode/Makefile
@@ -2,8 +2,9 @@
 P6=../../elf/elf_f_faster
 ElfSrc=../../elf/elf_f_src/
 ElfOriginal=$(ElfSrc)/Elf_Faster.pm
+ELF_STD_RED_RUN=../../STD_red/STD_red_run
 
-showcode: Makefile elf_core.p5 ShowCode.pm check_path_to_STD_red_run
+showcode: check_path_to_STD_red_run Makefile elf_core.p5 ShowCode.pm
 	cp elf_core.p5 showcode
 	$(P6) -s -o deleteme_code ShowCode.pm
 	cat deleteme_code >> showcode
@@ -15,6 +16,7 @@ elf_core.p5: $(P6)
 	$(P6) -x -o elf_core.p5 -I $(ElfSrc) ElfCore.pm
 
 check_path_to_STD_red_run:
+	perl -we 'exit(1) if !-f shift;' $(ELF_STD_RED_RUN)
 	$(ELF_STD_RED_RUN) -e say 3 > /dev/null
 
 demo: showcode
