--- a/misc/elfish/showcode/Makefile
+++ b/misc/elfish/showcode/Makefile
@@ -2,7 +2,6 @@
 P6=../../elf/elf_f_faster
 ElfSrc=../../elf/elf_f_src/
 ElfOriginal=$(ElfSrc)/Elf_Faster.pm
-ELF_STD_RED_RUN=../../STD_red/STD_red_run
 
 showcode: check_path_to_STD_red_run Makefile elf_core.p5 ShowCode.pm
 	cp elf_core.p5 showcode
@@ -16,6 +15,7 @@ elf_core.p5: $(P6)
 	$(P6) -x -o elf_core.p5 -I $(ElfSrc) ElfCore.pm
 
 check_path_to_STD_red_run:
+	# Checking for ELF_STD_RED_RUN=../../STD_red/STD_red_run
 	perl -we 'exit(1) if !-f shift;' $(ELF_STD_RED_RUN)
 	$(ELF_STD_RED_RUN) -e say 3 > /dev/null
 
