[elf] Small fix to EmitSimpleP5 to make kp6 for loop test work
git-svn-id: http://svn.pugscode.org/pugs@20501 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elf/elf_f_src/Makefile
+++ b/misc/elf/elf_f_src/Makefile
@@ -58,8 +58,11 @@ bootstrap_prep:
 # extra:
 bootstrap_on_simple:
 	../elf_f -x -o ../elf_f0 Elf.pm
+	chmod +x ../elf_f0
 	../elf_f0 -x -o ../elf_f1 Elf.pm
+	chmod +x ../elf_f1
 	../elf_f1 -x -o ../elf_f2 Elf.pm
+	chmod +x ../elf_f2
 	diff ../elf_f1 ../elf_f2
 	../elf_f2 -e 'say 3'
 	#
