[evalbot] shorter name for evalbot, in order to use up less screen space it's also not *so* experimental anymore ;-)
git-svn-id: http://svn.pugscode.org/pugs@20704 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/evalbot/perl6.conf
+++ b/misc/evalbot/perl6.conf
@@ -1,4 +1,4 @@
 server    = irc.freenode.org
 channels  = perl6
-nick      =  exp_evalbot
-alt_nicks = exp_evalbot_ foo_eval
+nick      = p6eval
+alt_nicks = p6_eval
