--- a/misc/elfish/elfX/Makefile
+++ b/misc/elfish/elfX/Makefile
@@ -13,13 +13,13 @@ if_bootstrap_succeeded:
 
 bootstrap:
 	# old compiler, new code
-	ELF_STD_RED_RUN=../../STD_red/STD_red_run ./elfX -x -o elfX0 Elf.pm
+	./elfX -x -o elfX0 Elf.pm
 	chmod +x elfX0
 	# hybrid compiler
-	ELF_STD_RED_RUN=../../STD_red/STD_red_run ./elfX0 -x -o elfX1 Elf.pm
+	./elfX0 -x -o elfX1 Elf.pm
 	chmod +x elfX1
 	# new compiler
-	ELF_STD_RED_RUN=../../STD_red/STD_red_run ./elfX1 -x -o elfX2 Elf.pm
+	./elfX1 -x -o elfX2 Elf.pm
 	chmod +x elfX2
 	# compiled itself?
 	diff elfX1 elfX2
