--- a/v6/smop/test/Makefile.am
+++ b/v6/smop/test/Makefile.am
@@ -8,7 +8,7 @@ AM_CFLAGS = -Wall -D_GNU_SOURCE -I$(top_srcdir)/include
 check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 	04_interpreter.t 05_capture.t 06_native_bool.t 07_native_int.t \
 	08_native_uint.t 09_threads.t 10_lowlevel_methods.t 11_lowlevel_scalar.t \
-	12_p6opaque.t
+	12_p6opaque.t 13_io.t
 
 01_smop_lowlevel_t_SOURCES = 01_smop_lowlevel.c
 02_stack_t_SOURCES = 02_stack.sm0p
@@ -22,3 +22,4 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 10_lowlevel_methods_t_SOURCES = 10_lowlevel_methods.c
 11_lowlevel_scalar_t_SOURCES = 11_lowlevel_scalar.sm0p
 12_p6opaque_t_SOURCES = 12_p6opaque.sm0p
+13_io_t_SOURCES = 13_io.sm0p
