[smop] ok 1 is printed using io functions, i'll remove the memory leak after a walk or something
git-svn-id: http://svn.pugscode.org/pugs@21269 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/src/Makefile.am
+++ b/v6/smop/src/Makefile.am
@@ -12,5 +12,5 @@ libsmop_la_SOURCES = smop_lowlevel.sm0p idconst.c						\
 	smop.c smop_internal.h smop_interpreter.c							\
     smop_slime_capturize.c smop_slime_currentframe.c smop_slime_frame.c	\
     smop_slime_node.c p6opaque.sm0p lowlevel_method.c smop_s1p_scalar.c\
-    smop_s1p_array.c smop_s1p_io.c
+    smop_s1p_array.c smop_s1p_io.c smop_s1p_str.c
 
