[smop] test/15 was not really failing... the test count was wrong... SMOP_SLIME_DEBUG compile option can be set to show all the methods called in slime eval...
git-svn-id: http://svn.pugscode.org/pugs@21340 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/src/Makefile.am
+++ b/v6/smop/src/Makefile.am
@@ -1,10 +1,10 @@
 .sm0p.c:
 	perl $(top_srcdir)/sm0p.pl $(top_srcdir) $< $@
 
-AM_CFLAGS = -Wall -D_GNU_SOURCE -DSMOP_LOWLEVEL_MEM_TRACE -I$(top_srcdir)/include 
+AM_CFLAGS = -Wall -D_GNU_SOURCE -DSMOP_LOWLEVEL_MEM_TRACE -I$(top_srcdir)/include
 AM_LDFLAGS = --no-undefined
 # use this to see alloc, refcnt_inc, refcnt_dec and destroys...    -DSMOP_LOWLEVEL_MEM_DEBUG 
-
+# use this to see all eval calls in SLIME -DSMOP_SLIME_DEBUG
 lib_LTLIBRARIES = libsmop.la
 libsmop_la_LIBADD = -lpthread
 libsmop_la_SOURCES = smop_lowlevel.sm0p idconst.c						\
