[misc/elfish/rx_on_re]  Setting up for development; hit a perlbug. The Regexp_ModuleA.pm tests now run.  Created a elf_f+Regexp_ModuleA hybrid. make check  partially runs. But perl 5.10 then malloc panics and segfaults.  Notes in README. Absent someone interested in debugging perlguts, this may be a showstopping blocker on this development path (towards a fast rx/re engine written in p6).
git-svn-id: http://svn.pugscode.org/pugs@21363 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/rx_on_re/Makefile
+++ b/misc/elfish/rx_on_re/Makefile
@@ -1,3 +1,14 @@
 
 check:
-	
+	export ELF_STD_RED_RUN=./../../STD_red/STD_red_run
+	../../elf/elf_f test.pm > tst_1 2> tst_2
+# diff ...
+
+old_create_baseline:
+	-mkdir qout
+	./remains_of_Regexp_ModuleA.pm --test > qout/test_1 2> qout/test_2
+	./remains_of_Regexp_ModuleA.pm --test > qout/test_12 2>&1
+	./remains_of_Regexp_ModuleA.pm --test6 > qout/test6_1 2> qout/test6_2
+	./remains_of_Regexp_ModuleA.pm --test6 > qout/test6_12 2>&1
+	-prove t/re_tests.t > qout/prove_re_1 2> qout/prove_re_2
+	-prove t/rx.t > qout/prove_rx_1 2> qout/prove_rx_2
