[smop] root namespace global interpreter (causes horrible leakage, when i try to destroy it spits out segfaults) some work on p6opauque
git-svn-id: http://svn.pugscode.org/pugs@21377 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/test/Makefile.am
+++ b/v6/smop/test/Makefile.am
@@ -13,7 +13,7 @@ AM_CFLAGS = -Wall -D_GNU_SOURCE -I$(top_srcdir)/include
 check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 	04_interpreter.t 05_capture.t 06_native_bool.t 07_native_int.t \
 	08_native_uint.t 09_threads.t 10_lowlevel_methods.t 11_lowlevel_scalar.t \
-	13_io.t 15_hash.t 16_labels.t 17_sm0p.t
+	13_io.t 15_hash.t 16_labels.t 17_sm0p.t 18_root_namespace.t
 
 01_smop_lowlevel_t_SOURCES = 01_smop_lowlevel.c
 02_stack_t_SOURCES = 02_stack.sm0p
@@ -32,3 +32,4 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 15_hash_t_SOURCES = 15_hash.sm0p
 16_labels_t_SOURCES = 16_labels.sm0p
 17_sm0p_t_SOURCES = 17_sm0p.sm0p
+18_root_namespace_t_SOURCES = 18_root_namespace.sm0p
