[rx_on_re] Establish regression baseline.
git-svn-id: http://svn.pugscode.org/pugs@21444 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/misc/elfish/rx_on_re/Makefile
+++ b/misc/elfish/rx_on_re/Makefile
@@ -2,7 +2,8 @@
 check:
 	export ELF_STD_RED_RUN=./../../STD_red/STD_red_run
 	../../elf/elf_f test.pm > tst_1 2> tst_2
-# diff ...
+	diff tst_1 t_baseline.result
+	@echo ok
 
 old_create_baseline:
 	-mkdir qout
