--- a/v6/smop/test/Makefile.am
+++ b/v6/smop/test/Makefile.am
@@ -13,7 +13,7 @@ AM_CFLAGS = -Wall -D_GNU_SOURCE -I$(top_srcdir)/include
 check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 	04_interpreter.t 05_capture.t 06_native_bool.t 07_native_int.t \
 	08_native_uint.t 09_threads.t 10_lowlevel_methods.t 11_lowlevel_scalar.t \
-	12_p6opaque.t \
+	12_p6opaque.t 14_p6opaque_methods.t \
 	15_hash.t 16_labels.t 17_sm0p.t 18_root_namespace.t 
 
 01_smop_lowlevel_t_SOURCES = 01_smop_lowlevel.c
@@ -29,7 +29,7 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 11_lowlevel_scalar_t_SOURCES = 11_lowlevel_scalar.sm0p
 12_p6opaque_t_SOURCES = 12_p6opaque.sm0p
 #13_io_t_SOURCES = 13_io.p6
-#14_p6opaque_methods_t_SOURCES = 14_p6opaque_methods.sm0p
+14_p6opaque_methods_t_SOURCES = 14_p6opaque_methods.sm0p
 15_hash_t_SOURCES = 15_hash.sm0p
 16_labels_t_SOURCES = 16_labels.sm0p
 17_sm0p_t_SOURCES = 17_sm0p.sm0p
