--- a/v6/smop/test/Makefile.am
+++ b/v6/smop/test/Makefile.am
@@ -15,6 +15,7 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 	08_native_uint.t 09_threads.t 10_lowlevel_methods.t 11_lowlevel_scalar.t \
 	12_p6opaque.t 14_p6opaque_methods.t \
 	15_hash.t 16_labels.t 17_sm0p.t 18_root_namespace.t 19_array.t \
+	20_smop_s1p_code.t \
 	dispatch_benchmark
 
 01_smop_lowlevel_t_SOURCES = 01_smop_lowlevel.c
@@ -29,11 +30,13 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 10_lowlevel_methods_t_SOURCES = 10_lowlevel_methods.c
 11_lowlevel_scalar_t_SOURCES = 11_lowlevel_scalar.sm0p
 12_p6opaque_t_SOURCES = 12_p6opaque.sm0p
-#13_io_t_SOURCES = 13_io.p6
 14_p6opaque_methods_t_SOURCES = 14_p6opaque_methods.sm0p
 15_hash_t_SOURCES = 15_hash.sm0p
 16_labels_t_SOURCES = 16_labels.sm0p
 17_sm0p_t_SOURCES = 17_sm0p.sm0p
 18_root_namespace_t_SOURCES = 18_root_namespace.sm0p
 19_array_t_SOURCES = 19_array.p6
+20_smop_s1p_code_t_SOURCES = 20_smop_s1p_code.sm0p
+
+
 dispatch_benchmark_SOURCES = dispatch_benchmark.sm0p
