[smop] attribute mostly implemented, tests still failing, but the code is there. Scalar no longer delegates the calls to its cell, there should be an implicit fetch in "value context"
git-svn-id: http://svn.pugscode.org/pugs@21662 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/src/Makefile.am
+++ b/v6/smop/src/Makefile.am
@@ -13,7 +13,7 @@ libsmop_la_SOURCES = smop_lowlevel.sm0p idconst.c						\
     smop_slime_capturize.c smop_slime_currentframe.c smop_slime_frame.c	\
     smop_slime_node.c     lowlevel_method.c smop_s1p_scalar.c smop_s1p_array.c smop_s1p_io.c  \
     smop_s1p_str.c smop_s1p_hash.c smop_s1p_root_namespace.c p6opaque.sm0p \
-    smop_s1p_ccode.c smop_s1p_code.c smop_s1p_attribute.c
+    smop_s1p_ccode.c smop_s1p_code.c smop_s1p_attribute.sm0p 
 
 
 
