* Refer to LICENSE/MIT.
git-svn-id: http://svn.pugscode.org/pugs@21684 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/Pugs.cabal
+++ b/Pugs.cabal
@@ -1,7 +1,7 @@
 Name            : Pugs
 Version         : 6.2.13.11
 license         : BSD3
-license-file    : LICENSE
+license-file    : LICENSE/MIT
 cabal-version   : >= 1.2
 copyright       : 2005-2008, The Pugs Contributors
 maintainer      : Audrey Tang <audreyt@audreyt.org>
