--- a/v6/smop/test/Makefile.am
+++ b/v6/smop/test/Makefile.am
@@ -1,6 +1,10 @@
 ELFX = $(top_srcdir)/../../misc/elfish/elfX/
 .sm0p.c:
 	perl $(top_srcdir)/sm0p.pl $(top_srcdir) $< $@
+.m0ld.c:
+	cat $(top_srcdir)/m0ld/m0ld_boilerplate_front > $@
+	$(top_srcdir)/m0ld/m0ld < $< >> $@
+	cat $(top_srcdir)/m0ld/m0ld_boilerplate_back >> $@
 .p6.pure_sm0p:
 	perl $(ELFX)/elfX -C sm0p -s $< > $@
 .pure_sm0p.sm0p:
@@ -16,7 +20,7 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 	12_p6opaque.t 14_p6opaque_methods.t \
 	15_hash.t 16_labels.t 17_sm0p.t 18_root_namespace.t 19_array.t \
 	20_smop_s1p_ccode.t 21_code.t 22_smop_s1p_attribute.t \
-	23_mold.t \
+	23_mold.t 24_mold.t\
 	dispatch_benchmark
 
 01_smop_lowlevel_t_SOURCES = 01_smop_lowlevel.c
@@ -41,5 +45,6 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 21_code_t_SOURCES = 21_code.p6
 22_smop_s1p_attribute_t_SOURCES = 22_smop_s1p_attribute.sm0p
 23_mold_t_SOURCES = 23_mold.c
+24_mold_t_SOURCES = 24_m0ld.m0ld
 
 dispatch_benchmark_SOURCES = dispatch_benchmark.sm0p
