* Solve the timeout problem at another direction by introducing PUGS_TIMEOUT   environment variable and have it set to 60 in yaml_harness.pl.
git-svn-id: http://svn.pugscode.org/pugs@21814 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/Pugs.cabal.in
+++ b/Pugs.cabal.in
@@ -162,6 +162,7 @@ executable pugs
         base, haskell98, filepath, mtl, stm, parsec < 3.0.0, network,
         pretty, time, random, process, containers, bytestring,
         array, directory, utf8-string, binary, haskeline >= 0.2.1, FindBin,
+        control-timeout,
 
         MetaObject       >= 0.0.4,
         HsParrot         >= 0.0.2,
