--- a/v6/smop/test/Makefile.am
+++ b/v6/smop/test/Makefile.am
@@ -21,6 +21,7 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 	15_hash.t 16_labels.t 17_sm0p.t 18_root_namespace.t 19_array.t \
 	20_smop_s1p_ccode.t 21_code.t 22_smop_s1p_attribute.t \
 	23_mold.t 24_m0ld.t 25_lexical_scope.t \
+	26_m0ld_pugs.t\
 	dispatch_benchmark
 
 01_smop_lowlevel_t_SOURCES = 01_smop_lowlevel.c
@@ -46,6 +47,9 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 22_smop_s1p_attribute_t_SOURCES = 22_smop_s1p_attribute.sm0p
 23_mold_t_SOURCES = 23_mold.c
 24_m0ld_t_SOURCES = 24_m0ld.m0ld
-25_lexical_scope_SOURCES = 25_lexical_scope.p6
+25_lexical_scope_t_SOURCES = 25_lexical_scope.p6
+26_m0ld_pugs_t_SOURCES = 26_m0ld_pugs.p6
+26_m0ld_pugs.m0ld: 26_m0ld_pugs.p6
+	$(top_srcdir)/../../pugs -Cm0ld $< > $@
 
 dispatch_benchmark_SOURCES = dispatch_benchmark.sm0p
