[smop] make pugs m0ld compilation non-blocking on error (at least untill it works)
git-svn-id: http://svn.pugscode.org/pugs@21859 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/test/Makefile.am
+++ b/v6/smop/test/Makefile.am
@@ -50,6 +50,6 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 25_lexical_scope_t_SOURCES = 25_lexical_scope.p6
 26_m0ld_pugs_t_SOURCES = 26_m0ld_pugs.p6
 26_m0ld_pugs.m0ld: 26_m0ld_pugs.p6
-	$(top_srcdir)/../../pugs -Cm0ld $< > $@
+	-$(top_srcdir)/../../pugs -Cm0ld $< > $@
 
 dispatch_benchmark_SOURCES = dispatch_benchmark.sm0p
