--- a/v6/smop/Makefile.am
+++ b/v6/smop/Makefile.am
@@ -1,2 +1,6 @@
 SUBDIRS=include src test m0ld sm0p
 include Makefile.test
+clean: 
+	echo "*** make clean and distclean are broken ***"
+distclean: 
+	echo "*** make clean and distclean are broken ***"
