--- a/v6/smop/test/Makefile.am
+++ b/v6/smop/test/Makefile.am
@@ -19,10 +19,10 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 	08_native_uint.t 09_threads.t 10_lowlevel_methods.t 11_lowlevel_scalar.t \
 	12_p6opaque.t 14_p6opaque_methods.t \
 	15_hash.t 16_labels.t 17_sm0p.t 18_root_namespace.t 19_array.t \
-	20_smop_s1p_ccode.t 21_code.t 22_smop_s1p_attribute.t \
+	20_smop_s1p_ccode.t 22_smop_s1p_attribute.t \
 	23_mold.t 24_m0ld.t 25_lexical_scope.t \
-	26_m0ld_pugs.t\
 	dispatch_benchmark
+#	26_m0ld_pugs.t
 
 01_smop_lowlevel_t_SOURCES = 01_smop_lowlevel.c
 02_stack_t_SOURCES = 02_stack.sm0p
@@ -43,12 +43,12 @@ check_PROGRAMS = 01_smop_lowlevel.t 02_stack.t 03_const_identifier.t \
 18_root_namespace_t_SOURCES = 18_root_namespace.sm0p
 19_array_t_SOURCES = 19_array.p6
 20_smop_s1p_ccode_t_SOURCES = 20_smop_s1p_ccode.sm0p
-21_code_t_SOURCES = 21_code.p6
+#21_code_t_SOURCES = 21_code.p6
 22_smop_s1p_attribute_t_SOURCES = 22_smop_s1p_attribute.sm0p
 23_mold_t_SOURCES = 23_mold.c
 24_m0ld_t_SOURCES = 24_m0ld.m0ld
 25_lexical_scope_t_SOURCES = 25_lexical_scope.p6
-26_m0ld_pugs_t_SOURCES = 26_m0ld_pugs.p6
+#26_m0ld_pugs_t_SOURCES = 26_m0ld_pugs.p6
 26_m0ld_pugs.m0ld: 26_m0ld_pugs.p6
 	-$(top_srcdir)/../../pugs -Cm0ld $< > $@
 
