[smop] skeleton for the default block signature lowlevel implementation in place... it should not be very hard to implement..
git-svn-id: http://svn.pugscode.org/pugs@21900 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/src/Makefile.am
+++ b/v6/smop/src/Makefile.am
@@ -15,6 +15,7 @@ libsmop_la_SOURCES = smop_lowlevel.sm0p idconst.c							\
 	smop_s1p_array.c smop_s1p_io.c											\
     smop_s1p_str.c smop_s1p_hash.c smop_s1p_root_namespace.c p6opaque.sm0p	\
     smop_s1p_ccode.c smop_s1p_code.c smop_s1p_attribute.sm0p smop_mold.c    \
-	smop_s1p_lexicalscope.c
+	smop_s1p_lexicalscope.c smop_s1p_capturize.c                            \
+	smop_s1p_defaultblocksignature.c
 
 
