--- a/v6/smop/m0ld/Makefile
+++ b/v6/smop/m0ld/Makefile
@@ -1,5 +1,6 @@
 all: m0ld
 check:
-m0ld: m0ld.hs
-	ghc --make m0ld.hs
-	touch ../test/*.m0ld
+m0ld: M0ld.hs
+	cabal configure
+	cabal build
+	cp dist/build/m0ld/m0ld m0ld
