[smop] cmake searches for cabal in ~/.cabal/bin too
git-svn-id: http://svn.pugscode.org/pugs@21946 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -1,10 +1,10 @@
 project (smop)
 cmake_minimum_required (VERSION 2.6)
 include_directories (${smop_SOURCE_DIR}/include)
-find_program (CABAL cabal)
+find_program (CABAL cabal ~/.cabal/bin)
 
 if(NOT CABAL)
-    message(FATAL "ERROR cabal is not found, please install cabal-install, you can find in third-party/cabal-install in the pugs repository or at http://hackage.haskell.org/cgi-bin/hackage-scripts/package/cabal-install")
+    message(FATAL "ERROR cabal is not found, please install cabal-install, you can find it in third-party/cabal-install in the pugs repository or at http://hackage.haskell.org/cgi-bin/hackage-scripts/package/cabal-install")
 endif(NOT CABAL)
 
 ### m0ld
