[smop] start of Code implementation
git-svn-id: http://svn.pugscode.org/pugs@21965 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -125,6 +125,7 @@ foreach (test_file
     test/18_root_namespace.p6
     test/19_array.p6
     test/20_smop_s1p_ccode.c
+    test/21_code.m0ld
     test/22_smop_s1p_attribute.sm0p
     test/23_mold.sm0p
     test/24_m0ld.m0ld
