[smop] YAY! We have code blocks working... with signature binding and all...
git-svn-id: http://svn.pugscode.org/pugs@21971 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -64,6 +64,7 @@ foreach (sm0p_file
     src/smop_s1p_defaultblocksignature.sm0p
     src/p6opaque.sm0p
     src/smop_s1p_attribute.sm0p
+    src/smop_s1p_code.sm0p
 )
 compile_sm0p (${sm0p_file})
 endforeach()
