[smop] SMOP__S1P__PurePrototypeHow implements a dispatch that .^!methods.{name}.($actualcapture)
git-svn-id: http://svn.pugscode.org/pugs@22015 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -62,6 +62,7 @@ foreach (sm0p_file
     src/smop_lowlevel.sm0p
     src/smop_s1p_lexicalscope.sm0p
     src/smop_s1p_defaultblocksignature.sm0p
+    src/smop_s1p_pureprototypehow.sm0p
     src/p6opaque.sm0p
     src/smop_s1p_attribute.sm0p
     src/smop_s1p_code.sm0p
@@ -88,6 +89,7 @@ add_library (smop
     src/smop_s1p_capturize.c
     src/smop_s1p_ccode.c
     src/smop_s1p_code.c
+    src/smop_s1p_pureprototypehow.c
     src/smop_s1p_defaultblocksignature.c
     src/smop_s1p_hash.c
     src/smop_s1p_io.c
@@ -132,6 +134,7 @@ foreach (test_file
     test/24_m0ld.m0ld
     test/25_lexical_scope.p6
     test/27_default_block_signature.p6
+    test/28_pure_prototype_how.sm0p
 )
     set(c_file)
     if (test_file MATCHES "\\.sm0p$")
