--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -140,6 +140,7 @@ foreach (test_file
     test/27_default_block_signature.p6
     test/28_pure_prototype_how.sm0p
     test/29_bind_capture_signature.p6
+    test/30_for_operator.m0ld
 )
     set(c_file)
     if (test_file MATCHES "\\.sm0p$")
