[smop] starting to implement "map"
git-svn-id: http://svn.pugscode.org/pugs@22136 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -69,6 +69,7 @@ foreach (sm0p_file
     src/p6opaque.sm0p
     src/smop_s1p_attribute.sm0p
     src/smop_s1p_code.sm0p
+    src/smop_s1p_map.sm0p
 )
 compile_sm0p (${sm0p_file})
 endforeach()
@@ -92,6 +93,7 @@ add_library (smop
     src/smop_s1p_capturize.c
     src/smop_s1p_ccode.c
     src/smop_s1p_code.c
+    src/smop_s1p_map.c
     src/smop_s1p_pureprototypehow.c
     src/smop_s1p_bindcapturesignature.c
     src/smop_s1p_defaultblocksignature.c
