[smop] specific test for array iterator...
git-svn-id: http://svn.pugscode.org/pugs@22180 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -144,6 +144,7 @@ foreach (test_file
     test/29_bind_capture_signature.p6
     test/30_array_map.m0ld
     test/31_int_postfix_plusplus.m0ld
+    test/32_array_iterator.m0ld
 )
     set(c_file)
     if (test_file MATCHES "\\.sm0p$")
