[smop] implementing the array iterator... some weirdness is still happening, the test is still failing... but it is mostly working
git-svn-id: http://svn.pugscode.org/pugs@22183 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -70,6 +70,7 @@ foreach (sm0p_file
     src/smop_s1p_attribute.sm0p
     src/smop_s1p_code.sm0p
     src/smop_s1p_map.sm0p
+    src/smop_s1p_array_iterator.sm0p
 )
 compile_sm0p (${sm0p_file})
 endforeach()
@@ -89,6 +90,7 @@ add_library (smop
     src/smop_lowlevel.c
     src/smop_mold.c
     src/smop_s1p_array.c
+    src/smop_s1p_array_iterator.c
     src/smop_s1p_attribute.c
     src/smop_s1p_capturize.c
     src/smop_s1p_ccode.c
