[smop] meta RI, it's only used by the IO RI `
git-svn-id: http://svn.pugscode.org/pugs@22230 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/smop/CMakeLists.txt
+++ b/v6/smop/CMakeLists.txt
@@ -110,6 +110,7 @@ add_library (smop
     src/smop_slime_currentframe.c
     src/smop_slime_frame.c
     src/smop_slime_node.c
+    src/smop_ri.c
 )
 
 file (MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test)
